@@ -1,16 +1,0 @@
-# $NetBSD: Makefile,v 1.3 2019/08/08 19:53:43 brook Exp $
-
-R_PKGNAME=	codetools
-R_PKGVER=	0.2-16
-CATEGORIES=	lang
-
-MAINTAINER=	minskim@NetBSD.org
-COMMENT=	Code analysis tools for R
-LICENSE=	gnu-gpl-v1 OR gnu-gpl-v2 OR gnu-gpl-v3
-
-CONFLICTS=	R>=3.6.0
-
-USE_LANGUAGES=	# none
-
-.include "../../math/R/Makefile.extension"
-.include "../../mk/bsd.pkg.mk"
